--- a/src/components/SingleProduct/SingleProduct.scss
+++ b/src/components/SingleProduct/SingleProduct.scss
@@ -79,3 +79,12 @@
   transition: 0.4s;
   border: none;
 }
+.rounded-icon {
+  color: white;
+  min-width: 20px;
+  text-align: center;
+  background-color: #872ce1;
+  padding: 6px 2px;
+  font-size: 12px;
+  border-radius: 50%;
+}
