--- a/src/components/Header/Search/Search.scss
+++ b/src/components/Header/Search/Search.scss
@@ -29,7 +29,7 @@
       color: #212121;
       outline: none;
       border: none;
-      text-transform: uppercase;
+      // text-transform: lowercase;
       @include md {
         font-size: 48px;
         height: 80px;
