--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -1,6 +1,5 @@
 @import "../../css-config/mixins.scss";
 
-
 .Parent-product-Image-Hover {
   padding: 20px 10px;
   display: inline-block;
@@ -8,24 +7,26 @@
   background-color: #eff4ee;
   cursor: pointer;
   border-radius: 5px;
-  @include md{
+  @include md {
     padding: 50px 30px;
-
   }
-  
-
 }
 .Parent-product-Image-Hover img {
   width: 100%;
   display: block;
   transition: 0.3s;
-
 }
 .Parent-Col-Hover:hover .Parent-product-Image-Hover img {
   opacity: 0.9;
   transform: scale(1.05);
   transform-origin: 50% 50%;
 }
-.product-description{
+.product-description {
   cursor: pointer;
+}
+.para-dots {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 96%;
 }
