--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -24,7 +24,7 @@
 .product-description {
   cursor: pointer;
 }
-.para-dots {
+.para-dots-product {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
