--- a/src/components/Home/Banner/Banner.scss
+++ b/src/components/Home/Banner/Banner.scss
@@ -75,12 +75,12 @@
 }
 
 .scroll-top {
-  height: 45px;
-  width: 45px;
+  height: 50px;
+  width: 50px;
   background: linear-gradient(to right, #872ce1, #3f18d5);
   position: fixed;
   bottom: 30px;
-  right: 30px;
+  right: 20px;
   cursor: pointer;
   border-radius: 50px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.336);
@@ -91,6 +91,10 @@
   justify-content: center;
   z-index: 99999;
   scroll-behavior: smooth;
+  @include sm {
+    bottom: 40px;
+    right: 40px;
+  }
 }
 
 .scroll-top svg {
