Cart count delay functionality

--- a/src/components/Cart/CartItem/CartItem.scss
+++ b/src/components/Cart/CartItem/CartItem.scss
@@ -23,11 +23,13 @@
   width: 56%;
 }
 .scrollable-div {
-  @include md {
+  @include sm {
     height: 530px;
   }
+  height: 450px;
   overflow-y: auto;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 .close-flex {
   display: flex;
